fixed a bug because of which heart particles could overflow the viewport size and scroll the document

--- a/style/main.less
+++ b/style/main.less
@@ -24,8 +24,12 @@ body {
 	display: block;
 	position: absolute;
 
-	width: 100vw;
-	height: 100vh;
+	min-width: 100dvw;
+	max-width: 100dvw;
+	min-height: 100dvh;
+	max-height: 100dvh;
+
+	overflow: hidden;
 }
 
 #light-up {
